/*
 * SPDX-License-Identifier: Apache-2.0
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     https://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

plugins {
    id 'com.github.ben-manes.versions' version '0.53.0'
    id 'groovy'
    id 'application'
    id 'org.springframework.boot' version '3.5.6'
    id 'io.spring.dependency-management' version '1.1.7'
}

repositories {
    mavenCentral()
    maven { url = 'https://repo.embabel.com/artifactory/libs-snapshot' }
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(25)
    }
}

tasks.withType(JavaExec) {
    jvmArgs = ['--enable-native-access=ALL-UNNAMED'] // avoid warning on JDK25
    standardInput = System.in
}

tasks.withType(GroovyCompile) {
    groovyOptions.parameters = true
}

application {
    mainClass = 'patterns.PatternsApplication'
}

var embabelVersion = '0.2.0-SNAPSHOT'

dependencies {
    implementation 'org.apache.groovy:groovy:5.0.2'
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation "com.embabel.agent:embabel-agent-api:$embabelVersion"
    implementation "com.embabel.agent:embabel-agent-starter-shell:$embabelVersion"
    implementation "com.embabel.agent:embabel-agent-starter-ollama:$embabelVersion"
}
